updated reset button

--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
             <h2 class="title">Wprowadz Dane</h2>
             <div class="data data-input">
                 <label for="dc">Srednica Freza - Dc - mm</label>
-                <input type="number" name="dc" id="dc">
+                <input type="number" class="input" name="dc" id="dc">
                 <label for="z">Liczba Zebow - Z - szt</label>
-                <input type="number" name="z" id="z">
+                <input type="number" class="input" name="z" id="z">
             </div>
             <h2 class="title">Pod Material i Frez</h2>
             <div class="data data-output">
                 <label for="vs">Predkosc Skrawania - Vs - mm</label>
-                <input type="number" name="vs" id="vs">
+                <input type="number" class="input" name="vs" id="vs">
                 <label for="fz">Posuw na zab - Fz - mm/zab</label>
-                <input type="number" name="fz" id="fz">
+                <input type="number" class="input" name="fz" id="fz">
                 <h2 class="title">Wynik</h2>
                 <label for="n">Predkosc Wrzeciona - N - rpm</label>
-                <input type="number" name="n" id="n">
+                <input type="number" class="input" name="n" id="n">
                 <label for="vf">Predkosc Posuwu - Vf - m/min</label>
-                <input type="number" name="vf" id="vf">
+                <input type="number" class="input" name="vf" id="vf">
             </div>
             <div class="buttons">
                 <button id="count" class="count">Oblicz</button>
