changed result input to text, and added values to the result inputs values

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <input type="number" class="input" name="fz" id="fz">
                 <h2 class="title">Wynik</h2>
                 <label for="n">Predkosc Wrzeciona - N - rpm</label>
-                <input type="number" class="input" name="n" id="n">
+                <input type="text" class="input" name="n" id="n">
                 <label for="vf">Predkosc Posuwu - Vf - m/min</label>
-                <input type="number" class="input" name="vf" id="vf">
+                <input type="text" class="input" name="vf" id="vf">
             </div>
             <div class="buttons">
                 <button id="count" class="count">Oblicz</button>
