--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
             <form class="data frez" id="frez">
                 <label for="hss">Stal HSS <input type="radio" id="hss" name="frez" value="hss">
                 </label>
-                <label for="vhm">Weglik VHM <input type="radio" id="vhm" name="frez" value="vhm">
+                <label for="vhm">Węglik VHM <input type="radio" id="vhm" name="frez" value="vhm">
                 </label>
             </form>
-            <h2 class="title">Wybierz Material</h2>
+            <h2 class="title">Wybierz Materiał</h2>
             <form class="data material" id="material">
                 <select name="materials" id="materials">
                     <option value=""></option>
-                    <option value="miekkie">drewno miekkie</option>
+                    <option value="miekkie">drewno miękkie </option>
                     <option value="sklejka">drewno twarde/sklejka</option>
-                    <option value="wiorowe">plyty wiorowe</option>
-                    <option value="pilsniowe">płyty pilsniowe</option>
+                    <option value="wiorowe">płyty wiórowe</option>
+                    <option value="pilsniowe">płyty pilśniowe</option>
                     <option value="alumczysty">aluminium czysty</option>
                     <option value="alumstop">aluminium stopy</option>
                     <option value="plastik">tworzywa sztuczne</option>
@@ -34,20 +34,20 @@
             </form>
             <h2 class="title">Wprowadz Dane</h2>
             <div class="data data-input">
-                <label for="dc">Srednica Freza - Dc - mm</label>
+                <label for="dc">Średnica Freza - Dc - mm</label>
                 <input type="number" class="input" name="dc" id="dc">
-                <label for="z">Liczba Zebow - Z - szt</label>
+                <label for="z">Liczba Zębów - Z - szt</label>
                 <input type="number" class="input" name="z" id="z">
             </div>
             <hr>
             <div class="data data-output">
-                <label for="vs">Predkosc Skrawania - Vs - mm</label>
+                <label for="vs">Prędkość Skrawania - Vs - mm</label>
                 <input type="number" class="input" name="vs" id="vs">
-                <label for="fz">Posuw na zab - Fz - mm/zab</label>
+                <label for="fz">Posuw na ząb - Fz - mm/zab</label>
                 <input type="number" class="input" name="fz" id="fz">
-                <label for="n">Predkosc Wrzeciona - N - rpm</label>
+                <label for="n">Prędkość Wrzeciona - N - rpm</label>
                 <input type="text" class="result input" name="n" id="n">
-                <label for="vf">Predkosc Posuwu - Vf - mm/min</label>
+                <label for="vf">Prędkość Posuwu - Vf - mm/min</label>
                 <input type="text" class="result input" name="vf" id="vf">
             </div>
             <div class="buttons">
